# telegram-bot-api-async-webhooks-test

./: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: main.py  settings.py  telegram_api.py
